tests/valid/trait/method_call_explicit_ufcs_local_mutable_annotated_pure_receiver.facet
trait Runner {
  fn run(self: Self) -> unrestricted isize;
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> unrestricted isize {
    self
  }
}

fn main() -> unrestricted isize {
  let mut x: unrestricted isize = 1;
  (<unrestricted isize as Runner>::run x)
}
