tests/invalid/closure/unknown_capture_name.facet
fn main() -> unrestricted isize {
    let y: unrestricted isize = 7 in
    let f = closure [z](x: unrestricted isize) -> unrestricted isize { y } in
    (f 1)
}
